# copier-django-template

./: .env.default  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  copier.yml  pyproject.toml
.github/workflows/: migrations-check.yml  tests.yml
apps/accounts/management/commands/: test.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: user.py
apps/accounts/tests/: test_user_password.py
apps/common/: apps.py  logging.py  test_logging.py
compose/local/: docker-compose.yml
config/settings/: base.py  local.py  production.py
extensions/: context.py
my-test-project/: .env.default  Taskfile.yml  conftest.py  pyproject.toml
my-test-project/apps/accounts/migrations/: 0001_initial.py
my-test-project/apps/accounts/models/: user.py
my-test-project/apps/accounts/tests/: test_user_list.py  test_user_me.py
my-test-project/compose/local/: docker-compose.yml
my-test-project/config/: logging.py  urls.py
my-test-project/config/settings/: base.py  preprod.py  production.py
my-test-project/config/tests/: test_logging.py
my-test-project/taskfiles/: Check.yml  Django.yml  Docker.yml  Lint.yml  Test.yml
taskfiles/: Django.yml  Lint.yml  Test.yml
template/: .env.default.jinja  .gitignore  README.md.jinja  pyproject.toml.jinja  {% if project_license != 'none' %}LICENSE{% endif %}.jinja
template/.github/workflows/: linter.yml  linter.yml.jinja  migrations-check.yml  migrations-check.yml.jinja  tests.yml  tests.yml.jinja
template/apps/accounts/: admin.py
template/apps/accounts/migrations/: 0001_initial.py
template/apps/accounts/models/: user.py
template/apps/accounts/tests/: test_jwt_endpoints.py  test_user_detail.py  test_user_list.py  test_user_me.py  test_user_username.py
template/apps/core/: fields.py
template/compose/local/: docker-compose.yml.jinja
template/compose/local/includes/: postgres_docker.yml.jinja
template/config/: urls.py  urls.py.jinja
template/config/settings/: __init__.py  base.py.jinja  local.py.jinja  preprod.py.jinja  production.py.jinja
template/config/settings/includes/: base_preprod_template.jinja  db_config_postgres_template.jinja  db_config_sqlite_template.jinja  django_debug_toolbar_config.jinja  django_extensions_config.jinja  drf_spectacular_config.jinja
template/includes/licenses/: bsd3.jinja  mit.jinja
template/taskfiles/: Check.yml
template/tests/: common.py
template/tests/assertions/: email_assertions.py
template/tests/fixtures/: user.py
template/utils/: README.md
tests/: conftest.py  test_project_structure.py  types.py
