[project]
name = "copier-django-template"
version = "0.1.0"
description = "A modern Copier template for scaffolding a Django project with best practices built-in"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "copier>=9.11.0",
    "copier-template-extensions>=0.3.3",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
