[project]
name = "copier-django-template"
version = "0.1.0-alpha.1"
description = "A modern Copier template for scaffolding a Django project with best practices built-in"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "copier>=9.11.0",
    "copier-template-extensions>=0.3.3",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-n",
    "auto",
]
